resolved projectsWrapper alignemt issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ i {
   position: fixed;
   display: block;
   width: 100%;
-  min-height: 10vh;
+  min-height: 6vh;
   text-align: center;
   top: 0%;
   transition: top 0.3s
@@ -410,8 +410,12 @@ i {
 }
 
 .projectsWrapper .flex {
-  align-items: flex-start;
-  margin: 5% 0%;
+  /* align-items: flex-start; */
+  /* margin: 5% 0%; */
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 0; 
+  margin-right: auto;
 }
 
 .projectsWrapper img {
@@ -431,6 +435,7 @@ i {
 
 .projectInfo {
   margin: 0% 5%;
+  width: 70%;
 }
 
 .skillsetsWrapper {
@@ -575,10 +580,10 @@ i {
     display: block;
   }
 
-  .projectsWrapper .flex {
+  /* .projectsWrapper .flex {
     flex-direction:column;
     align-items: center;
-  }
+  } */
 
   .skillsetsWrapper .flex {
     flex-flow: none;
